--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -24,8 +24,12 @@
     </p>
 
     <script>
-        var nome = window.prompt('Qual é seu nome?')
-        window.alert('É um grande prazer te conhecer, ' + nome + '!')
+        var n1 = Number(window.prompt('Digite um numero: '))
+
+        var n2 = Number(window.prompt('Digite outro numero: '))
+
+        var s = n1 + n2
+        window.alert(` A soma entre ${n1} e ${n2} é: ${s}`)
     </script>
 
 </body>
