--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -4,29 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro programa...</title>
+    <title>Document</title>
 
     <style>
         body {
-            background-color: rgb(116, 116, 228);
-            color: white;
             font: normal 20pt Arial;
         }
     </style>
 </head>
 <body>
-    <h1>
-        Olá, mundo!
-    </h1>
-
-    <p>
-        Já me livrei da maldição
-    </p>
-
+    
     <script>
-        var nome = window.prompt('Qual é seu nome?')
-        window.alert('É um grande prazer te conhecer, ' + nome + '!')
+        var nome = window.prompt('Qual é o seu nome?')
+        document.write(`Olá, ${nome} Seu nome tem ${nome.length} letras.<br>`)
+        document.write(`<br>Seu nome em maiusculas é ${nome.toUpperCase()}`)
     </script>
-
 </body>
 </html>
