--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -25,11 +25,23 @@
         Aprendendo a usar o <strong>DOM</strong> em JavaScrip.
     </p>
 
-    <div>Clique em mim</div>
+    <div class="msg">Clique em mim!</div>
 
     <script>
+        var corpo = window.document.body
         var p1 = window.document.getElementsByTagName('p')[0]
-        p1.style.color = 'blue'
+
+        /*
+        var d = window.document.getElementById('msg')
+        d.style.background = 'green'
+        d.innerText = 'Estou aguardando...'
+        */
+
+        /*var d = window.document.getElementsByName('msg')[0]
+        d.innerText = 'Olá!'*/
+
+        var d = window.document.querySelector('div.msg')
+        d.style.background = 'blue'
     </script>
 </body>
 </html>
