exercícios de condições em js

--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -8,9 +8,15 @@
 
     <style>
         body {
-            background-color: rgb(116, 116, 228);
+            background-color: rgb(000, 000, 255);
             color: white;
             font: normal 20pt Arial;
+        }
+
+        h1 {
+            border: 5px dotted black;
+            padding: 20px;
+            margin: 202px;
         }
     </style>
 </head>
