--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -10,16 +10,19 @@
 <body>
     <header>
         <h1>
-            Titulo
+            Tabuada
         </h1>
     </header>
     <section>
         <div>
-            testando
+            <p>Número: <input type="number" id="txtn" name="num">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
-
         <div>
-            olá
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um Número Acima</option>
+
+            </select>
         </div>
     </section>
     <footer>
