--- a/Atividades Práticas/loops/ex03 - Pares/modelo.html
+++ b/Atividades Práticas/loops/ex03 - Pares/modelo.html
@@ -7,23 +7,23 @@
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="pares()">
     <header>
         <h1>
-            Titulo
+            Pares
         </h1>
     </header>
     <section>
         <div>
-            testando
+            
         </div>
 
-        <div>
-            olá
-        </div>
+        <div id="res"></div>
     </section>
     <footer>
         <p>© Curso em Video</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
