--- a/Atividades Práticas/loops/ex04 - Calculo de Fatorial/ex04-fatorial.html
+++ b/Atividades Práticas/loops/ex04 - Calculo de Fatorial/ex04-fatorial.html
@@ -7,23 +7,21 @@
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="fatorial()">
     <header>
         <h1>
-            Titulo
+            Calculo de fatorial
         </h1>
     </header>
     <section>
-        <div>
-            testando
-        </div>
+        <div></div>
 
-        <div>
-            olá
-        </div>
+        <div id="res"></div>
+
     </section>
     <footer>
         <p>© Curso em Video</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
