--- a/Atividades Práticas/loops/ex05 - Fibonacci/ex05.html
+++ b/Atividades Práticas/loops/ex05 - Fibonacci/ex05.html
@@ -7,10 +7,10 @@
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="calcularFatorial()">
+<body onload="seqFibo()">
     <header>
         <h1>
-            Calculo de fatorial
+            Sequência de Fibonacci
         </h1>
     </header>
     <section>
