--- a/Atividades Práticas/ambiente/ex01/modelo.html
+++ b/Atividades Práticas/ambiente/ex01/modelo.html
@@ -7,17 +7,23 @@
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="calcularFatorial()">
+<body>
     <header>
         <h1>
-            Calculo de fatorial
+            Contador
         </h1>
     </header>
     <section>
-        <div></div>
+        <div>
+            Inicio: <input type="number" id="inicio"> <br>
+            Fim: <input type="number" id="fim"><br>
+            Passo: <input type="number" id="passo"> <br>
+            <input type="button" value="Contar" onclick="contador()">
+        </div>
 
-        <div id="resp"></div>
-
+        <div id="res">
+            
+        </div>
     </section>
     <footer>
         <p>© Curso em Video</p>
