--- a/Atividades Práticas/loops/ex06 - nota/modelo.html
+++ b/Atividades Práticas/loops/ex06 - nota/modelo.html
@@ -7,17 +7,20 @@
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="calcularFatorial()">
+<body onload="nota()">
     <header>
         <h1>
-            Calculo de fatorial
+            Titulo
         </h1>
     </header>
     <section>
-        <div></div>
+        <div>
+            
+        </div>
 
-        <div id="resp"></div>
-
+        <div id="resp">
+        
+        </div>
     </section>
     <footer>
         <p>© Curso em Video</p>
